--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
